--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,12 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python 3.6
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.6
     - name: Install dependencies
       run: |
+        sudo apt install gcc gobject-introspection-devel cairo-gobject-devel pkg-config python3-devel gtk3 -y
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
