--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,12 +20,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.6
+    - name: Install dependencies - Apt
+      run: >
+        sudo apt-get install python3-gi \
+        gir1.2-gtk-3.0
     - name: Install dependencies
       run: |
-        sudo apt install gcc gobject-introspection-devel cairo-gobject-devel pkg-config python3-devel gtk3 -y
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then sudo pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
