Fixed some issues with service file
Added explicit user and supplementary group
Changed restart settings to correct on-failure

Also explicitly calling Python 3 in the script.

Signed-off-by: Jiri Podivin <jpodivin@gmail.com>

--- a/facesnap.service
+++ b/facesnap.service
@@ -6,7 +6,9 @@ After=multi-user.target paths.target
 Type=simple
 ExecStart=facesnap.py
 RestartSec=3min
-Restart=onfailure
+Restart=on-failure
+User=root
+SupplementaryGroups=video
 
 [Install]
 WantedBy=multi-user.target
